Closed
Bug 390798
Opened 18 years ago
Closed 18 years ago
Animated GIFs shrink (resize to favicon size) after loading
Categories
(Core Graveyard :: GFX, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mak, Assigned: vlad)
References
()
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
247.96 KB,
image/gif
|
Details | |
|
665 bytes,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
Animated gifs shrunk without any reason
1. Open url
2. See gif resize, it's about 550*400, it's resized to favicon size
This regressed on 2007-08-03, worked on 2007-08-02
Comment 1•18 years ago
|
||
According to another test this happens if you view the image alone in a tab (icon is created for the tab). After that the image is displayed in icon size if page zoom is exactly 1.0.
It does not happen if it is too large to create an icon.
If you use page zoom on this image weird things happen (make another bug?).
Happened for me after the new cairo landed.
| Reporter | ||
Updated•18 years ago
|
Summary: Animated Gifs shrunk after loading → Animated Gifs shrunks (resize to favicon size) after loading
Comment 2•18 years ago
|
||
Comment 3•18 years ago
|
||
Marco, are you sure about that regression range? I get
Works: 20070801_2338_firefox-3.0a7pre.en-US.win32
Broken: 20070802_0056_firefox-3.0a7pre.en-US.win32
http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1186035660&maxdate=1186041359
Probably due to Cairo 1.5 --> bug 383960
Blocks: 383960
Flags: blocking1.9?
| Reporter | ||
Comment 4•18 years ago
|
||
Yes Steve
sorry, i had tagged the 01 nightly at 02 (so my range was 01-03 and not 02-03), i have re-checked and you're totally right
| Assignee | ||
Comment 5•18 years ago
|
||
Weird. I can't reproduce with -chrome foo.gif -width 1000 -height 1000, only with the firefox chrome. Looking into it...
Assignee: nobody → vladimir
| Assignee | ||
Comment 6•18 years ago
|
||
pixman wasn't correctly resetting the transform if the identity matrix was passed in.
Attachment #275300 -
Flags: review?(pavlov)
Updated•18 years ago
|
Attachment #275300 -
Flags: review?(pavlov) → review+
| Assignee | ||
Comment 8•18 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Summary: Animated Gifs shrunks (resize to favicon size) after loading → Animated GIFs shrink (resize to favicon size) after loading
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•