b=390798, animated gifs shrunk to favicon size; also b=390622, yahoo mail beta misrendered; r=stuart